--- a/content/custom.css
+++ b/content/custom.css
@@ -13,7 +13,19 @@ from style.css to this file, and modify it to your liking. */
 ----------------
 Add styles beneath this line that you want to be applied across your entire site */
 
+.logo_column {
+  float: left;
+  width: 25%;
+  height: 50;
+  padding: 5px;
+}
 
+/* Clear floats after image containers */
+.logo_row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
 
 /* DESKTOP STYLES
