--- a/content/box.css
+++ b/content/box.css
@@ -12,3 +12,40 @@
   margin-bottom: 12px;
   position: relative;
 }
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #002f5f;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font: bold 24px/1.2em Arial, sans-serif;
+  color: white;
+}
+
+.collapsible:after {
+  content: "\002B"; /* Unicode character for "plus" sign (+) */
+  font: bold 24px/1.2em Arial, sans-serif;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212"; /* Unicode character for "minus" sign (-) */
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: teal;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.collapse_box {
+  margin-top: 18px;
+  padding: 18px;
+  display: none;
+  overflow: hidden;
+}
